--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="read_file.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="rep56.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="repeat_test.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="read_file.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="rep56.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
